--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+    "test": "jest" // Esto asume que estás usando Jest para tus pruebas
   },
   "dependencies": {
     "express": "^4.17.1",
