--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,16 @@ jobs:
     - name: Chequeo de Seguridad de Dependencias
       run: npm audit
 
-    # Ejemplo de cómo integrar una herramienta de escaneo de secretos
-    # Sustituye con una herramienta real y su comando específico
+    # Escaneo de secretos utilizando truffleHog
     - name: Escaneo de Secretos
-      run: echo "Aquí se ejecutaría un escaneo de secretos en el código"
+      run: |
+        pip install truffleHog
+        trufflehog --regex --entropy=True .
 
-    # Ejemplo de integración de una herramienta de análisis estático de código
-    # Sustituye con una herramienta real y su comando específico
-    - name: Análisis Estático de Código
-      run: echo "Aquí se ejecutaría una herramienta de análisis estático de código"
+    # Integración de SonarCloud para análisis estático de código
+    - name: Análisis Estático de Código con SonarCloud
+      run: |
+        npm install -g sonarqube-scanner
+        sonar-scanner
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
